[package]
name = "rufus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Ta sekcja jest kluczowa do naprawienia błędu kompilacji.
# Mówi ona, że biblioteka `getrandom` (używana przez `rand`)
# powinna używać funkcji z JavaScript, aby działać w przeglądarce.
[dependencies.getrandom]
version = "0.2"
features = ["js"]